@@ -2,6 +2,7 @@
 
   Users side :
   ------------
+    # The render of custom menu icons has been fixed for non-square images.
     # In menu entries with custom URLs, links are now opened in a new tab.
     # Some escaping issues have been fixed.
     # Apps :
